--- a/src/pages/Signup.module.css
+++ b/src/pages/Signup.module.css
@@ -1,6 +1,6 @@
 .container {
-  margin-top: 2rem;
-  width: 40%;
+  margin-top: .5rem;
+  width: 30%;
   margin-inline: auto;
   background-color: white;
   border-radius: 5px;
@@ -22,29 +22,6 @@
   gap: 1rem;
 }
 
-.container > form > fieldset {
-  border: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 0.25rem;
-  padding: 0;
-}
-
-.container > form > fieldset > label {
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.container > form > fieldset > input {
-  padding-block: 0.25rem;
-}
-
-.container > form > fieldset > input:focus {
-  border: 1px solid var(--accent-clr);
-  box-shadow: 0 2px 4px #00000033;
-  outline: 0;
-}
-
 .container > form > div > button {
   border: 0;
   background-color: var(--accent-clr);
@@ -52,9 +29,14 @@
   font-size: 14px;
   font-weight: 600;
   text-transform: uppercase;
-  padding-block: 0.25rem;
+  padding-block: 0.4rem;
   cursor: pointer;
   box-shadow: 0 2px 8px #00000033;
+  width: 100%;
+}
+
+.container > form > div > p {
+  font-size: 14px;
 }
 
 .container > form > div > p > a {
