--- a/src/components/AuthContainer.module.css
+++ b/src/components/AuthContainer.module.css
@@ -1,22 +1,20 @@
 .container {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   width: 30%;
   margin-inline: auto;
   background-color: white;
   border-radius: 5px;
   box-shadow: 0 2px 8px #00000033;
   padding: 1rem;
-
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
 }
 
 .container > h1 {
   margin: 0;
+  margin-bottom: 1rem;
 }
 
 .container > form {
+  margin-top: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
